<resources>
    <string name="app_name">10120241Latihan3</string>
    <string name="monitory_membantu_anda_mengontrol_hp_anak">Monitory Membantu Anda Mengontrol HP Anak</string>
    <string name="mulai">Mulai</string>
    <string name="masukan_kode">Masukan Kode</string>
    <string name="kebijakan_data">Kebijakan Data</string>
    <string name="ketentuan_pengguna">Ketentuan Pengguna</string>
    <string name="dan">dan</string>
    <string name="dengan_menekan_tombol_masuk_berarti_anda_menyetujui">Dengan menekan tombol masuk berarti Anda menyetujui</string>
    <string name="belum_punya_kode_keluarga">Belum punya kode keluarga?</string>
    <string name="kami">kami</string>
    <string name="ketikkan_kode_keluarga_yang_ayah_bunda_miliki_disini">Ketikkan kode keluarga yang Ayah Bunda miliki disini</string>
    <string name="nama_panggilan_kamu">Nama Panggilan Kamu</string>
    <string name="umur_kamu">Umur Kamu</string>
    <string name="masuk">Masuk</string>
    <string name="selanjutnya">Selanjutnya</string>
</resources>